[gd_scene load_steps=18 format=2]

[ext_resource path="res://control_face.png" type="Texture" id=1]
[ext_resource path="res://ocontrol.gd" type="Script" id=2]
[ext_resource path="res://control_face_done.png" type="Texture" id=3]
[ext_resource path="res://beep.wav" type="AudioStream" id=4]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.3, 0.3, 0.3 )

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 0.3, 0.3 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=5]
flip_faces = true
size = Vector2( 0.3, 0.3 )

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 1 )

[sub_resource type="CylinderMesh" id=7]
top_radius = 0.03
bottom_radius = 0.03
height = 0.6

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.458824, 0.317647, 0.027451, 1 )

[sub_resource type="ConcavePolygonShape" id=9]
data = PoolVector3Array( -0.15, 0.15, 0.15, 0.15, 0.15, 0.15, -0.15, -0.15, 0.15, 0.15, 0.15, 0.15, 0.15, -0.15, 0.15, -0.15, -0.15, 0.15, 0.15, 0.15, -0.15, -0.15, 0.15, -0.15, 0.15, -0.15, -0.15, -0.15, 0.15, -0.15, -0.15, -0.15, -0.15, 0.15, -0.15, -0.15, 0.15, 0.15, 0.15, 0.15, 0.15, -0.15, 0.15, -0.15, 0.15, 0.15, 0.15, -0.15, 0.15, -0.15, -0.15, 0.15, -0.15, 0.15, -0.15, 0.15, -0.15, -0.15, 0.15, 0.15, -0.15, -0.15, -0.15, -0.15, 0.15, 0.15, -0.15, -0.15, 0.15, -0.15, -0.15, -0.15, 0.15, 0.15, 0.15, -0.15, 0.15, 0.15, 0.15, 0.15, -0.15, -0.15, 0.15, 0.15, -0.15, 0.15, -0.15, 0.15, 0.15, -0.15, -0.15, -0.15, 0.15, 0.15, -0.15, 0.15, -0.15, -0.15, -0.15, 0.15, -0.15, 0.15, 0.15, -0.15, -0.15, -0.15, -0.15, -0.15 )

[sub_resource type="BoxShape" id=10]

[sub_resource type="PlaneMesh" id=11]

[sub_resource type="SpatialMaterial" id=12]
albedo_texture = ExtResource( 1 )

[sub_resource type="SpatialMaterial" id=13]
albedo_texture = ExtResource( 3 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0.16 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, -0.16 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="MeshInstance3" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.16, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.16, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="MeshInstance5" type="MeshInstance" parent="MeshInstance"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, -0.16, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance6" type="MeshInstance" parent="MeshInstance"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0.16, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="MeshInstance7" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
shape = SubResource( 9 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
collision_layer = 4
collision_mask = 2147483650

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 10 )

[node name="MapFace" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.39303, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="MapFaceTaken" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.4, 0 )
visible = false
mesh = SubResource( 11 )
material/0 = SubResource( 13 )

[node name="BeepAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
